Install npm packages
- body-parser, because I forgot it earlier
- nodemon as a devDependency, because it gives me a warning when I just have it installed
globally (it thinks I'm running version 0.0.0 or something)

--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/tomatohammado/ga-wdi-project-2#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.10",
     "mongoose": "^4.13.9"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.10"
   }
 }
