--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
   },
   "homepage": "https://github.com/tomatohammado/ga-wdi-project-2#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "method-override": "^2.3.10",
-    "mongoose": "^4.13.9"
+    "mongoose": "^4.13.9",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {}
 }
